change file direct

--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
         </header>
         <div class="grid">
           <a class="grid-item reveal" href="https://www.linkedin.com/posts/saranga-samarakoon-77791427b_psrvlog-webdevelopment-competition-activity-7295829786893959170-ek1l?utm_source=share&utm_medium=member_desktop&rcm=ACoAAERNDEsBw4S3G8hP9gsTH02drUM1RyfuQug" aria-label="Project one">
-            <img src="assests/projects/travelHub.png" alt="Project 1" loading="lazy" decoding="async" />
+            <img src="assests/travelHub.png" alt="Project 1" loading="lazy" decoding="async" />
             <span class="grid-item__label">Traveling App</span>
           </a>
           <a class="grid-item reveal delay-1" href="https://www.linkedin.com/posts/saranga-samarakoon-77791427b_aspiring-software-engineer-full-stack-activity-7295769587030142977-AcwZ?utm_source=share&utm_medium=member_desktop&rcm=ACoAAERNDEsBw4S3G8hP9gsTH02drUM1RyfuQug">
-            <img src="/assests/projects/1739447015791.jpeg" alt="Project 2" loading="lazy" decoding="async" />
+            <img src="/assests/1739447015791.jpeg" alt="Project 2" loading="lazy" decoding="async" />
             <span class="grid-item__label">Banking App</span>
           </a>
           <a class="grid-item reveal delay-2" href="https://www.linkedin.com/posts/saranga-samarakoon-77791427b_mernstack-inventorymanagement-webdevelopment-activity-7244633464912674816-wjF4?utm_source=share&utm_medium=member_desktop&rcm=ACoAAERNDEsBw4S3G8hP9gsTH02drUM1RyfuQug">
-            <img src="/assests/projects/image.png" alt="Project 3" loading="lazy" decoding="async" />
+            <img src="/assests/image.png" alt="Project 3" loading="lazy" decoding="async" />
             <span class="grid-item__label">Inventory Management System</span>
           </a>
           <a class="grid-item reveal" href="https://www.linkedin.com/posts/saranga-samarakoon-77791427b_javafx-mysql-possystem-activity-7336457046206099457-iNWs?utm_source=share&utm_medium=member_desktop&rcm=ACoAAERNDEsBw4S3G8hP9gsTH02drUM1RyfuQug">
-            <img src="/assests/projects/Screenshot 2025-08-28 145151.png" alt="Project 4" loading="lazy" decoding="async" />
+            <img src="/assests/Screenshot 2025-08-28 145151.png" alt="Project 4" loading="lazy" decoding="async" />
             <span class="grid-item__label">POS System</span>
           </a>
           <a class="grid-item reveal delay-1" href="https://www.linkedin.com/posts/saranga-samarakoon-77791427b_javafx-mysql-softwareengineering-activity-7320711427252461569-h0fA?utm_source=share&utm_medium=member_desktop&rcm=ACoAAERNDEsBw4S3G8hP9gsTH02drUM1RyfuQug">
-            <img src="/assests/projects/Screenshot 2025-08-28 145444.png" alt="Project 5" loading="lazy" decoding="async" />
+            <img src="/assests/Screenshot 2025-08-28 145444.png" alt="Project 5" loading="lazy" decoding="async" />
             <span class="grid-item__label">Library Management System</span>
           </a>
           <!-- <a class="grid-item reveal delay-2" href="#">
